--- a/extensions/hello/languages/pt_BR/messages.po
+++ b/extensions/hello/languages/pt_BR/messages.po
@@ -2,21 +2,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 1.0.0 (hello, messages)\n"
 "POT-Creation-Date: 2014-07-23 12:50+0000\n"
-"PO-Revision-Date: 2014-07-22 19:10+0200\n"
-"Last-Translator: Kehet <kehet@kehet.com>\n"
-"Language-Team: Kehet\n"
-"Language: fi_FI\n"
+"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.6\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-SourceCharset: UTF-8\n"
 
 #: extensions/hello/views/admin/link.razr:4
 #: extensions/hello/src/HelloLink.php:22
 msgid "Hello World"
-msgstr "Hei maailma"
+msgstr "Olá Mundo"
 
 #: extensions/hello/views/admin/settings.razr:9
 msgid "Message"
@@ -53,7 +50,7 @@ msgid "Hello Widget Form."
 msgstr ""
 
 #~ msgid "Hello %name%"
-#~ msgstr "Hei %name%"
+#~ msgstr "Olá %name%"
 
 #~ msgid "This Settings page is just for demonstration purposes."
-#~ msgstr "Tämä asetussivu on ainoastaan esimerkkitarkoituksiin"
+#~ msgstr "Esta página Configurações é apenas para fins de demonstração."
