Added Portuguese language

--- a/extensions/page/languages/pt_BR/messages.po
+++ b/extensions/page/languages/pt_BR/messages.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pagekit 0.8.3 (page, messages)\n"
-"POT-Creation-Date: 2014-07-23 12:51+0000\n"
+"Project-Id-Version: Pagekit 1.0.0 (page, messages)\n"
+"POT-Creation-Date: 2014-07-23 12:50+0000\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Last-Translator: Lucas C.S <lucas_z2011@hotmail.com>\n"
+"Language-Team: Hello Pagekit <https://www.facebook.com/groups/HelloPagekit/>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
