--- a/extensions/system/languages/ru_RU/messages.po
+++ b/extensions/system/languages/ru_RU/messages.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (system, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-23 12:24+0400\n"
-"Last-Translator: Alex <manager@pagekitcommunity.ru>\n"
+"PO-Revision-Date: 2014-07-26 01:49+0400\n"
+"Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
@@ -603,7 +603,7 @@ msgstr "Информация"
 #: extensions/system/views/admin/settings/index.razr:78
 #: extensions/system/views/admin/settings/index.razr:79
 msgid "Clear Cache"
-msgstr "Очистка кэшка"
+msgstr "Очистка кэша"
 
 #: extensions/system/views/admin/settings/index.razr:107
 msgid "Select caches to clear:"
