--- a/extensions/blog/languages/pt_BR/messages.po
+++ b/extensions/blog/languages/pt_BR/messages.po
@@ -2,13 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 1.0.0 (blog, messages)\n"
 "POT-Creation-Date: 2014-07-23 12:50+0000\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
+"PO-Revision-Date: 2014-07-24 17:31-0000\n"
 "Last-Translator: Lucas C.S <lucas_z2011@hotmail.com>\n"
-"Language-Team: Hello Pagekit <https://www.facebook.com/groups/HelloPagekit/>\n"
+"Language-Team: Hello Pagekit <https://www.facebook.com/groups/HelloPagekit/"
+">\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.5\n"
 
 #: extensions/blog/views/admin/post/table.razr:8
 #: extensions/blog/views/admin/post/edit.razr:43
