--- a/extensions/system/languages/ru_RU/messages.po
+++ b/extensions/system/languages/ru_RU/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (system, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-26 01:49+0400\n"
+"PO-Revision-Date: 2014-07-26 13:55+0400\n"
 "Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
@@ -1949,7 +1949,7 @@ msgstr "Обновление базы данных..."
 
 #: extensions/system/src/System/Controller/UpdateController.php:127
 msgid "Installed successfully."
-msgstr "Установлен прошла успешно."
+msgstr "Установка прошла успешно."
 
 #: extensions/system/src/System/Dashboard/FeedWidget.php:23
 msgid "Feed"
