--- a/extensions/system/languages/ru_RU/messages.po
+++ b/extensions/system/languages/ru_RU/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (system, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-26 14:18+0400\n"
+"PO-Revision-Date: 2014-07-26 14:47+0400\n"
 "Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
@@ -3731,7 +3731,7 @@ msgstr "Аккаунт активирован. Пользователю отпр
 
 #: extensions/system/src/User/Controller/RegistrationController.php:201
 msgid "Your account has been activated."
-msgstr "Ваша аккаунт активирован."
+msgstr "Ваш аккаунт активирован."
 
 #: extensions/system/src/User/Controller/RegistrationController.php:216
 msgid "Welcome to %site%!"
