--- a/extensions/hello/languages/de_DE/messages.po
+++ b/extensions/hello/languages/de_DE/messages.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 1.0.0 (hello, messages)\n"
 "POT-Creation-Date: 2013-11-10 19:28+0000\n"
-"PO-Revision-Date: 2014-07-27 17:42+0100\n"
+"PO-Revision-Date: 2014-07-28 12:42+0100\n"
 "Last-Translator: Andre Sieverding <webmaster@andre-sieverding.de>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.7\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language: de_DE\n"
+"Language-Team: \n"
 
 #: extensions/hello/src/Pagekit/Hello/Controller/DefaultController.php:17
 msgid "Hello %name%"
